# bookstore

./: Dockerfile  README.md  pyproject.toml
bookstore/: pytest.ini  settings.py  urls.py
bookstore/tests/: test_uni.py
bookstore/tests/test_viewsets/: test_order_viewset.py
bookstore/tests/test_viewsets_product/: test_category_viewset.py  test_product_viewset.py
order/: admin.py  factories.py  urls.py
order/migrations/: 0001_initial.py  0002_remove_order_product_order_product.py  0003_remove_order_product_order_product.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/: factories.py
order/viewset/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/: factories.py
product/viewsets/: category_viewset.py  product_viewset.py
